[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Zenno Zenith <zennozenith@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
config = "0.14.0"
chrono = "0.4.38"
# log = "0.4"
# env_logger = "0.11"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7"
unicode-segmentation = "1"
# validator = { version = "0.18", features = ["derive"] }
email_address = "0.2"
serde-aux = "4.5"
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1"
anyhow = "1"
base64 = "0.22"
# sha3 = "0.10"
argon2 = { version = "0.5", features = ["std"] }
urlencoding = "2"
htmlescape = "0.3"
sha2 = "0.10"
hmac = { version = "0.12", features = ["std"] }
hex = "0.4"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

[dependencies.uuid]
version = "1.9.0"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dev-dependencies]
once_cell = "1"
claims = "0.7"
fake = "2.9"
quickcheck = "1"
quickcheck_macros = "1"
wiremock = "0.6.0"
serde_json = "1"
serde_html_form = "0.2"
linkify = "0.10"
